# introduccion-ml-aplicado

./: README.md  pyproject.toml
ejercicios/: arboles_de_decision.ipynb  sagemaker_xgboost_customer_churn.ipynb  starter_clasificacion_titanic.ipynb  starter_prediccion_precio_de_casas.ipynb  titanic.ipynb
